test/errors/error22.base
The symbol 'x' is not defined
fun foo () {
   x = 0;
   ^
